# meur

./: .gitignore  README.md  flake.nix  meur.cabal
app/: Main.hs
src/Meur/: Bib.hs  BibHakyll.hs  Builder.hs  Config.hs  Context.hs  Pandoc.hs  Types.hs  Util.hs
src/Meur/Compiler/: Feed.hs  Photo.hs  Post.hs  Tag.hs
template/: 404.md  paper.csl  papers.bib  references.bib  site.yaml  talks.bib
template/reverse-geocoding/: 2026-02-07-great-wave.jpg.json  2026-02-08-starry-night.jpg.json  2026-02-09-mona-lisa.jpg.json
template/scripts/: anchor-links.lua  footnote-commas.lua  org-keywords.lua
template/static/: 2026-01-26.org  2026-02-02.org  2026-02-09.org  a-blog-post.md  about.org  another-blog-post.md  code.css  home.org  index.org  logs.org  papers.org  photos.org  posts.org  robots.txt  style.css  tags.org  talks.org  teaching.org
template/static/scripts/: toggle-theme.js
template/static/talks/slides/: 2012-victor-inventing.html
template/templates/: atom.xml  default.html  default.md  feed.json  log.html  log.md  page-list.html  page-list.md  paper.html  paper.md  photo.html  post.html  post.md  sitemap.xml  tag.html  tag.md  talk-feed.html  talk.html  talk.md
template/tools/: geocoding.sh  thumbs.sh
